add content + .container

--- a/homepage.html
+++ b/homepage.html
@@ -12,20 +12,23 @@
 
 <body>
     <header class="header">
-        <a href="#" class="header-logo__link"><img src="/image/logo-black.svg" alt="" class="header-logo__image"></a>
-        <nav class="header-nav">
-            <ul class="header-nav__list">
-                <li class="header-nav__item"><a href="homepage.html" class="header-nav__link">HOME</a></li>
-                <li class="header-nav__item"><a href="aboutus.html" class="header-nav__link">ABOUT US</a></li>
-                <li class="header-nav__item"><a href="sermons.html" class="header-nav__link">SERMON</a></li>
-                <li class="header-nav__item"><a href="blog.html" class="header-nav__link">BLOG</a></li>
-            </ul>
-        </nav>
-        <button class="header-btn">CONTACT US</button>
+        <div class="container header-container">
+            <a href="#" class="header-logo__link"><img src="/image/logo-black.svg" alt=""
+                    class="header-logo__image"></a>
+            <nav class="header-nav">
+                <ul class="header-nav__list">
+                    <li class="header-nav__item"><a href="homepage.html" class="header-nav__link">HOME</a></li>
+                    <li class="header-nav__item"><a href="aboutus.html" class="header-nav__link">ABOUT US</a></li>
+                    <li class="header-nav__item"><a href="sermons.html" class="header-nav__link">SERMON</a></li>
+                    <li class="header-nav__item"><a href="blog.html" class="header-nav__link">BLOG</a></li>
+                </ul>
+            </nav>
+            <button class="header-btn">CONTACT US</button>
     </header>
 
     <section class="section-welcome">
-        <div class="section-welcome__content">
+
+        <div class="container welcome-container">
             <h6 class="welcome-h6 white-text">WELCOME TO OUR CHURCH</h6>
             <h1 class="welcome-h1 white-text">BECOME A PART OF OUR COMMUNITY</h1>
             <a href="#" class="welcome-btn beige">LEARN MORE</a>
@@ -34,47 +37,127 @@
                 </p>
             </div>
         </div>
+        </div>
     </section>
 
     <section class="sub-headline">
-        
+        <div class="container sub-headline__container">
+            <p class="sub-headline__label label2">SUB-HEADLINE</p>
+            <h2 class="sub-headline__h2">A CHURCH THAT'S RELEVANT</h2>
+            <ul class="sub-headline__cards-list">
+                <li class="sub-headline__cards-item">
+                    <div class="headline__cards-container">
+                        <div class="sub-headline__cards-icon1 sub-headline__cards-icon beige"></div>
+                        <h4 class="sub-headline__cards-h4">ABOUT US</h4>
+                        <p class="sub-headline__cards-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </li>
+                <li class="sub-headline__cards-item">
+                    <div class="headline__cards-container">
+                        <div class="sub-headline__cards-icon2 sub-headline__cards-icon beige"></div>
+                        <h4 class="sub-headline__cards-h4">GET INVOLVED</h4>
+                        <p class="sub-headline__cards-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </li>
+                <li class="sub-headline__cards-item">
+                    <div class="headline__cards-container">
+                        <div class="sub-headline__cards-icon3 sub-headline__cards-icon beige"></div>
+                        <h4 class="sub-headline__cards-h4">GIVING BACK</h4>
+                        <p class="sub-headline__cards-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </li>
+            </ul>
+            <p class="sub-headline__label label2">SUB-HEADLINE</p>
+            <h2 class="sub-headline__h2">LOVE AND COMPASSION</h2>
+            <p class="sub-headline__text paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="#" class="sub-headline__btn beige">READ MORE</a>
+            <ul class="sub-headline__cards-img-list">
+                <li class="sub-headline__cards-img-item headline-img1"></li>
+                <li class="sub-headline__cards-img-item headline-img2"></li>
+                <li class="sub-headline__cards-img-item headline-img3"></li>
+            </ul>
+            <p class="sub-headline__label label2">OUR MISSION&VISION</p>
+            <h4 class="sub-headline__h4">CELEBRATE WITH US</h4>
+            <p class="sub-headline__text paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="#" class="sub-headline__link">Read More &rarr;</a>
+        </div>
+    </section>
+
+    <section class="benefits">
+        <div class="container-benefits container">
+            <p class="label2 benefits-p">WATCH AND LISTEN</p>
+            <h2 class="benefits-h2">THE BENEFITS OF JOINING THE CHURCH</h2>
+            <ul class="benefits-cards__list">
+                <li class="benefits-cards__item">
+                    <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                </li>
+                <li class="benefits-cards__item">
+                    <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                </li>
+                <li class="benefits-cards__item">
+                    <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                </li>
+                <li class="benefits-cards__item">
+                    <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                </li>
+            </ul>
+        </div>
     </section>
 
 
     <footer class="footer black">
-        <div class="footer-first__half">
-            <img src="/image/logo-bezheviy.svg" alt="" class="footer-logo__image footer-custom__list">
-            <p class="footer-copyright cap2 footer-custom__list">© COPYRIGHT FINSWEET 2022</p>
-            <a href="tel:4805550103" class="footer-phone cap2 footer-custom__list">(480) 555-0103</a>
-            <address class="footer-address cap2 footer-custom__list">4517 WASHINGTON AVE. </address>
-            <a href="mailto:finsweet@example.com" class="footer-mail cap2 footer-custom__list">FINSWEET@EXAMPLE.COM</a>
-        </div>
-        <div class="footer-second__half">
-            <ul class="footer-list">
-                <li class="footer-list__item"><a href="#" class="footer-list__link cap3">Quicklinks</a></li>
-                <li class="footer-list__item"><a href="aboutus.html" class="footer-list__link cap2">ABOUT US</a></li>
-                <li class="footer-list__item"><a href="sermons.html" class="footer-list__link cap2">SERMONS</a></li>
-                <li class="footer-list__item"><a href="sermonevent.html" class="footer-list__link cap2">EVENTS</a></li>
-                <li class="footer-list__item"><a href="blog.html" class="footer-list__link cap2">BLOG</a></li>
-            </ul>
-            <ul class="footer-list">
-                <li class="footer-list__item cap3">Connect</li>
-                <li class="footer-list__item">
-                    <a href="" class="footer-list__icon__link"><img src="image/facebook-icon.svg" alt="facebook"
-                            class="footer-list__icon"></a>
-                    <a href="" class="footer-list__icon__link"><img src="image/twitter-icon.svg" alt="twitter-icon"
-                            class="footer-list__icon"></a>
-                    <a href="" class="footer-list__icon__link"><img src="image/linkedin-icon.svg" alt="linkedin-icon"
-                            class="footer-list__icon"></a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer-third__half">
-            <h4 class="footer-subscribe h4">SUBSCRIBE TO GET LATEST UPDATES AND NEWS</h4>
-            <label class="footer-label">
-                <input type="text" value="Yourmail@gmail.com" class="footer-label__input cap3">
-                <button class="footer-label__btn beige">SUBSCRIBE</button>
-            </label>
+        <div class="container footer-container">
+            <div class="footer-first__half">
+                <img src="/image/logo-bezheviy.svg" alt="" class="footer-logo__image footer-custom__list">
+                <p class="footer-copyright cap2 footer-custom__list">© COPYRIGHT FINSWEET 2022</p>
+                <a href="tel:4805550103" class="footer-phone cap2 footer-custom__list">(480) 555-0103</a>
+                <address class="footer-address cap2 footer-custom__list">4517 WASHINGTON AVE. </address>
+                <a href="mailto:finsweet@example.com"
+                    class="footer-mail cap2 footer-custom__list">FINSWEET@EXAMPLE.COM</a>
+            </div>
+            <div class="footer-second__half">
+                <ul class="footer-list">
+                    <li class="footer-list__item"><a href="#" class="footer-list__link cap3">Quicklinks</a></li>
+                    <li class="footer-list__item"><a href="aboutus.html" class="footer-list__link cap2">ABOUT US</a>
+                    </li>
+                    <li class="footer-list__item"><a href="sermons.html" class="footer-list__link cap2">SERMONS</a></li>
+                    <li class="footer-list__item"><a href="sermonevent.html" class="footer-list__link cap2">EVENTS</a>
+                    </li>
+                    <li class="footer-list__item"><a href="blog.html" class="footer-list__link cap2">BLOG</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li class="footer-list__item cap3">Connect</li>
+                    <li class="footer-list__item">
+                        <a href="" class="footer-list__icon__link"><img src="image/facebook-icon.svg" alt="facebook"
+                                class="footer-list__icon"></a>
+                        <a href="" class="footer-list__icon__link"><img src="image/twitter-icon.svg" alt="twitter-icon"
+                                class="footer-list__icon"></a>
+                        <a href="" class="footer-list__icon__link"><img src="image/linkedin-icon.svg"
+                                alt="linkedin-icon" class="footer-list__icon"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-third__half">
+                <h4 class="footer-subscribe h4">SUBSCRIBE TO GET LATEST UPDATES AND NEWS</h4>
+                <label class="footer-label">
+                    <input type="text" value="Yourmail@gmail.com" class="footer-label__input cap3">
+                    <button class="footer-label__btn beige">SUBSCRIBE</button>
+                </label>
+            </div>
         </div>
     </footer>
 </body>
