add some animation

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
                     <li class="header-nav__item"><a href="blog.html" class="header-nav__link">BLOG</a></li>
                 </ul>
             </nav>
-            <button class="header-btn">CONTACT US</button>
+            <button class="header-btn btn">CONTACT US</button>
     </header>
 
     <section class="section-welcome">
@@ -31,7 +31,7 @@
         <div class="container welcome-container">
             <h6 class="welcome-h6 white-text">WELCOME TO OUR CHURCH</h6>
             <h1 class="welcome-h1 white-text">BECOME A PART OF OUR COMMUNITY</h1>
-            <a href="#" class="welcome-btn beige">LEARN MORE</a>
+            <a href="#" class="welcome-btn beige btn">LEARN MORE</a>
             <div class="welcome-p"><span class="welcome-p__dash"></span>
                 <p class="welcome-p__text white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
                 </p>
@@ -79,7 +79,7 @@
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <a href="#" class="sub-headline__btn beige">READ MORE</a>
+            <a href="#" class="sub-headline__btn btn beige">READ MORE</a>
             <ul class="sub-headline__cards-img-list">
                 <li class="sub-headline__cards-img-item headline-img1"></li>
                 <li class="sub-headline__cards-img-item headline-img2"></li>
@@ -98,23 +98,64 @@
             <p class="label2 benefits-p">WATCH AND LISTEN</p>
             <h2 class="benefits-h2">THE BENEFITS OF JOINING THE CHURCH</h2>
             <ul class="benefits-cards__list">
-                <li class="benefits-cards__item">
+                <li class="benefits-cards__item" id="benefits-card1">
                     <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
-                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut.</p>
                 </li>
-                <li class="benefits-cards__item">
+                <li class="benefits-cards__item" id="benefits-card2">
                     <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
-                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut.</p>
                 </li>
-                <li class="benefits-cards__item">
+                <li class="benefits-cards__item" id="benefits-card3">
                     <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
-                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut.</p>
                 </li>
-                <li class="benefits-cards__item">
+                <li class="benefits-cards__item" id="benefits-card4">
                     <h5 class="benefits-cards__h5">WATCH AND LISTEN TO OUR SERMONS</h5>
-                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</p>
+                    <p class="benefits-cards__p paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut.</p>
                 </li>
             </ul>
+        </div>
+    </section>
+
+
+    <section class="section-joinus">
+        <div class="joinus-container container">
+            <p class="label2">UPCOMING SERMONS</p>
+            <h2 class="h2">JOIN US AND BECOME PART OF SOMETHING GREAT</h2>
+            <div class="joinus-events">
+                <div class="joinus-with-image">
+                    <div class="joinus__info">
+                        <div class="joinus__info-container">
+                        <div class="joinus__info-header">
+                            <p class="black-text cap3">UPCOMING EVENT</p>
+                            <div class="joinus__info-header-date">
+                                <h5 class="h5">20</h5>
+                                <p class="label2">JULY</p>
+                            </div>
+                        </div>
+                        <div class="joinus__info-content">
+                            <h5 class="h5">WATCH AND LISTEN TO OUR SERMONS</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            <div class="joinus__info-date-detail">
+                                <img src="" alt="" class="joinus__info-date-img">
+                                <p class="joinus__info-date-detail-p">Friday 23:39 IST Saturday 11:20 ISD</p>
+                            </div>
+                            <div class="joinus__info-address">
+                                <img src="" alt="" class="joinus__info-address-img">
+                                <p class="joinus__info-address-text">No 233 Main St. New York, United States</p>
+                            </div>
+                            <a href="#" class="joinus__btn btn-secondary">REGISTER</a>
+                        </div></div>
+                    </div>
+                    <img src="/image/a-man-and-woman-wearing-angel-costumes.png" alt="" class="joinus-img">
+                </div>
+                <a href="" class="label1 joiuns-link">View all Sermons &#8597;</a>
+            </div>
         </div>
     </section>
 
@@ -155,7 +196,7 @@
                 <h4 class="footer-subscribe h4">SUBSCRIBE TO GET LATEST UPDATES AND NEWS</h4>
                 <label class="footer-label">
                     <input type="text" value="Yourmail@gmail.com" class="footer-label__input cap3">
-                    <button class="footer-label__btn beige">SUBSCRIBE</button>
+                    <button class="footer-label__btn beige btn">SUBSCRIBE</button>
                 </label>
             </div>
         </div>
